; ModuleID = '/home/carl/AnghaBench/git/extr_json-writer.c_indent_pretty.c'
source_filename = "/home/carl/AnghaBench/git/extr_json-writer.c_indent_pretty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"  \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.json_writer*)* @indent_pretty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @indent_pretty(%struct.json_writer* %0) #0 {
  %2 = alloca %struct.json_writer*, align 8
  %3 = alloca i32, align 4
  store %struct.json_writer* %0, %struct.json_writer** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %7 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp slt i32 %5, %9
  br i1 %10, label %11, label %18

11:                                               ; preds = %4
  %12 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %13 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %12, i32 0, i32 0
  %14 = call i32 @strbuf_addstr(i32* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %11
  %16 = load i32, i32* %3, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %3, align 4
  br label %4

18:                                               ; preds = %4
  ret void
}

declare dso_local i32 @strbuf_addstr(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
